# AzurLaneAutoScript

./: .gitattributes  .gitignore  .gitmodules  ADT-V4.bat  CMakeLists.txt  Dockerfile  EasyALAS_CLICK_INSTALL.bat  Easy_Install-V2.bat  Makefile  README.md  README_en.md  README_es.md  README_jp.md  alas.bat  alas.py  alas.pyw  alas_cn.pyw  alas_controller.py  alas_down.bat  alas_en.pyw  alas_jp.pyw  alas_start.bat  alas_tw.pyw  campaign_7_4.py  connection.py  console.bat  cs.py  dev_tools.bat  docker-compose.yml  downloader.bat  environment-arm-mac.txt  environment.yml  extract_button.bat  gui.py  image_check.py  implementation-5720.md  inlang.config.js  installer.py  main.py  main.pyw  (+12 more)
.claude/: settings.local.json
.github/: gitee-mirror.yml  pull.yml
campaign/: Readme.md  campaign_11_2.py  campaign_12_2.py
command/: CheckUpdate.bat  Config.bat  ConfigAlas.bat  ConfigTemplate.bat  GenerateConsoleBatch.bat  Get.bat  LanguageSet.bat  Log.bat  SystemSet.bat  config  taskkill.bat
config/: alas.json  deploy.template-AidLux-cn.yaml  deploy.template-AidLux.yaml  deploy.template-cn.yaml  deploy.template-docker-cn.yaml  deploy.template-docker.yaml  deploy.template-linux-cn.yaml  deploy.template-linux.yaml  deploy.template.yaml  deploy.yaml  main_template.conf  template.fpy.json  template.ini  template.json  template.maa.json  template.yaml
deploy/: Readme.md  adb.py  alas.py  app.py  atomic.py  config.py  emulator.py  git.py  installer.py  logger.py  patch.py  pip.py  set.py  template  utils.py
dev_tools/: Docker-run.sh  Dockerfile  Flatten_generator.py  alas2.bat  (+31 more)
(+2504 files in other folders)
